--- a/index1.html
+++ b/index1.html
@@ -1,5 +1,8 @@
-const arr = [2, 4, 5, 1, 7, 5, 2, 1];
+function htmlColorNames(arr) {
 // Only change code below this line
-arr.splice(1, 4);
+arr.splice(0, 2, 'DarkSalmon', 'BlanchedAlmond');
 // Only change code above this line
-console.log(arr);
+return arr;
+}
+
+console.log(htmlColorNames(['DarkGoldenRod', 'WhiteSmoke', 'LavenderBlush', 'PaleTurquoise', 'FireBrick']));
