--- a/index1.html
+++ b/index1.html
@@ -1,8 +1,12 @@
-function forecast(arr) {
+function copyMachine(arr, num) {
+let newArr = [];
+while (num >= 1) {
 // Only change code below this line
-
-return arr = arr.slice(2, 4);;
+newArr.push([...arr]);
+// Only change code above this line
+num--;
+}
+return newArr;
 }
 
-// Only change code above this line
-console.log(forecast(['cold', 'rainy', 'warm', 'sunny', 'cool', 'thunderstorms']));
+console.log(copyMachine([true, false, true], 2));
