--- a/index1.html
+++ b/index1.html
@@ -1,8 +1,16 @@
-function quickCheck(arr, elem) {
-// Only change code below this line
-return arr.indexOf(elem) >= 0 ? true : false;
+function filteredArray(arr, elem) {
+let newArr = [];
+// change code below this line
+
+for (let i = 0; i < arr.length; i++) {
+if (arr[i].indexOf(elem) == -1) {
+//Checks every parameter for the element and if is NOT there continues the code
+newArr.push(arr[i]); //Inserts the element of the array in the new filtered array
 }
-// Only change code above this line
+}
 
-
-console.log(quickCheck(['squash', 'onions', 'shallots'], 'mushrooms'));
+// change code above this line
+return newArr;
+}
+// change code here to test different cases:
+console.log(filteredArray([[3, 2, 3], [1, 6, 3], [3, 13, 26], [19, 3, 9]], 3));
