--- a/index1.html
+++ b/index1.html
@@ -1,16 +1,9 @@
-function filteredArray(arr, elem) {
-let newArr = [];
-// change code below this line
-
-for (let i = 0; i < arr.length; i++) {
-if (arr[i].indexOf(elem) == -1) {
-//Checks every parameter for the element and if is NOT there continues the code
-newArr.push(arr[i]); //Inserts the element of the array in the new filtered array
-}
-}
-
-// change code above this line
-return newArr;
-}
-// change code here to test different cases:
-console.log(filteredArray([[3, 2, 3], [1, 6, 3], [3, 13, 26], [19, 3, 9]], 3));
+let myNestedArray = [
+// Only change code below this line
+['unshift', false, 1, 2, 3, 'complex', 'nested'],
+['loop', 'shift', 6, 7, 1000, 'method'],
+['concat', false, true, 'spread', 'array', ['deep']],
+['mutate', 1327.98, 'splice', 'slice', 'push', [['deeper']]],
+['iterate', 1.3849, 7, '8.4876', 'arbitrary', 'depth', [[['deepest']]]]
+// Only change code above this line
+];
