--- a/index1.html
+++ b/index1.html
@@ -1,14 +1,18 @@
-let userActivity = {
-id: 23894201352,
-date: 'January 1, 2017',
-data: {
-totalUsers: 51,
-online: 42
-}
+let foods = {
+apples: 25,
+oranges: 32,
+plums: 28,
+bananas: 13,
+grapes: 35,
+strawberries: 27
 };
 
+function checkInventory(scannedItem) {
 // Only change code below this line
-userActivity.data.online =45;
-// Only change code above this line
+return foods[scannedItem];
 
-console.log(userActivity);
+
+// Only change code above this line
+}
+
+console.log(checkInventory("apples"));
