--- a/index1.html
+++ b/index1.html
@@ -7,12 +7,11 @@ grapes: 35,
 strawberries: 27
 };
 
-function checkInventory(scannedItem) {
 // Only change code below this line
-return foods[scannedItem];
-
+delete foods.oranges;
+delete foods.plums;
+delete foods.strawberries;
 
 // Only change code above this line
-}
 
-console.log(checkInventory("apples"));
+console.log(foods);
