--- a/index1.html
+++ b/index1.html
@@ -1,17 +1,31 @@
-let foods = {
-apples: 25,
-oranges: 32,
-plums: 28,
-bananas: 13,
-grapes: 35,
-strawberries: 27
+let users = {
+Alan: {
+age: 27,
+online: true
+},
+Jeff: {
+age: 32,
+online: true
+},
+Sarah: {
+age: 48,
+online: true
+},
+Ryan: {
+age: 19,
+online: true
+}
 };
 
-// Only change code below this line
-delete foods.oranges;
-delete foods.plums;
-delete foods.strawberries;
-
-// Only change code above this line
-
-console.log(foods);
+function isEveryoneHere(userObj) {
+if (
+userObj.hasOwnProperty("Alan") &&
+userObj.hasOwnProperty("Jeff") &&
+userObj.hasOwnProperty("Sarah") &&
+userObj.hasOwnProperty("Ryan")
+) {
+return true;
+}
+return false;
+}
+console.log(isEveryoneHere(users));
