--- a/index1.html
+++ b/index1.html
@@ -1,26 +1,27 @@
-let users = {
-Alan: {
-age: 27,
-online: false
-},
-Jeff: {
-age: 32,
-online: true
-},
-Sarah: {
-age: 48,
-online: false
-},
-Ryan: {
-age: 19,
-online: true
+let user = {
+name: 'Kenneth',
+age: 28,
+data: {
+username: 'kennethCodesAllDay',
+joinDate: 'March 26, 2016',
+organization: 'freeCodeCamp',
+friends: [
+'Sam',
+'Kira',
+'Tomo'
+],
+location: {
+city: 'San Francisco',
+state: 'CA',
+country: 'USA'
+}
 }
 };
 
-function getArrayOfUsers(obj) {
-// Only change code below this line
-return Object.keys(obj)
-// Only change code above this line
+function addFriend(userObj, friend) {
+// change code below this line
+userObj.data.friends.push(friend);
+return userObj.data.friends;
+// change code above this line
 }
-
-console.log(getArrayOfUsers(users));
+console.log(addFriend(user, 'Pete'));
