--- a/index1.html
+++ b/index1.html
@@ -1,6 +1,7 @@
-function convertCtoF(celsius) {
-let fahrenheit = celsius * (9 / 5) + 32;
-return fahrenheit;
+function reverseString(str) {
+let reversedStr = "";
+for (let i = str.length - 1; i >= 0; i--) {
+reversedStr += str[i];
 }
-
-convertCtoF(30);
+return reversedStr;
+}
