--- a/index1.html
+++ b/index1.html
@@ -1,7 +1,8 @@
-function reverseString(str) {
-let reversedStr = "";
-for (let i = str.length - 1; i >= 0; i--) {
-reversedStr += str[i];
+function factorialize(num) {
+if (num === 0) {
+return 1;
 }
-return reversedStr;
+return num * factorialize(num - 1);
 }
+
+factorialize(5);
