--- a/index1.html
+++ b/index1.html
@@ -1,14 +1,6 @@
-function largestOfFour(arr) {
-const results = [];
-for (let i = 0; i < arr.length; i++) {
-let largestNumber = arr[i][0];
-for (let j = 1; j < arr[i].length; j++) {
-if (arr[i][j] > largestNumber) {
-largestNumber = arr[i][j];
-}
-}
-results[i] = largestNumber;
+function confirmEnding(str, target) {
+
+return str.slice(str.length - target.length) === target;
 }
 
-return results;
-}
+confirmEnding("He has to give me a new name", "name");
