--- a/index1.html
+++ b/index1.html
@@ -1,9 +1,8 @@
-function repeatStringNumTimes(str, num) {
-let accumulatedStr = "";
-
-for (let i = 0; i < num; i++) {
-accumulatedStr += str;
+function truncateString(str, num) {
+// Clear out that junk in your trunk
+if (str.length > num) {
+return str.slice(0, num) + "...";
+} else {
+return str;
 }
-
-return accumulatedStr;
 }
