--- a/index1.html
+++ b/index1.html
@@ -1,5 +1,8 @@
-function booWho(bool) {
-return typeof bool === "boolean";
+function titleCase(str) {
+const newTitle = str.split(" ");
+const updatedTitle = [];
+for (let st in newTitle) {
+updatedTitle[st] = newTitle[st][0].toUpperCase() + newTitle[st].slice(1).toLowerCase();
 }
-
-booWho(null);
+return updatedTitle.join(" ");
+}
