--- a/index1.html
+++ b/index1.html
@@ -1,9 +1,8 @@
-function frankenSplice(arr1, arr2, n) {
-// It's alive. It's alive!
-let newArray = arr2.slice();
-for (let i = 0; i < arr1.length; i++) {
-newArray.splice(n, 0, arr1[i]);
-n++;
+function bouncer(arr) {
+let newArray = [];
+for (let i = 0; i < arr.length; i++) {
+if (arr[i]) newArray.push(arr[i]);
 }
 return newArray;
 }
+bouncer([7, "ate", "", false, 9]);
