--- a/index1.html
+++ b/index1.html
@@ -1,10 +1,18 @@
-function mutation(arr) {
-let test = arr[1].toLowerCase();
-let target = arr[0].toLowerCase();
-for (let i = 0; i < test.length; i++) {
-if (target.indexOf(test[i]) < 0) return false;
+function chunkArrayInGroups(arr, size) {
+let temp = [];
+let result = [];
+
+for (let a = 0; a < arr.length; a++) {
+if (a % size !== size - 1) temp.push(arr[a]);
+else {
+temp.push(arr[a]);
+result.push(temp);
+temp = [];
 }
-return true;
 }
 
-mutation(["hello", "hey"]);
+if (temp.length !== 0) result.push(temp);
+return result;
+}
+
+chunkArrayInGroups(["a", "b", "c", "d"], 2);
