--- a/index1.html
+++ b/index1.html
@@ -1,4 +1,7 @@
 let dog = {
-name: 'Jimmi',
-numLegs: 2
+name: "Spot",
+numLegs: 4
 };
+// Only change code below this line
+console.log(dog.name);
+console.log(dog.numLegs);
