--- a/index1.html
+++ b/index1.html
@@ -1,8 +1,7 @@
 let dog = {
 name: "Spot",
 numLegs: 4,
-sayLegs: function() { return "This dog has " + dog.numLegs + " legs.";}
+sayLegs: function() {return "This dog has " + this.numLegs + " legs.";}
 };
-
 
 dog.sayLegs();
