--- a/index1.html
+++ b/index1.html
@@ -1,7 +1,6 @@
-function Dog() {
-this.name = "Rupert";
-this.color = "brown";
+function Dog(name, color) {
+this.name = name;
+this.color = color;
 this.numLegs = 4;
 }
-// Only change code below this line
-let hound = new Dog();
+let terrier = new Dog("Kerri", "black");
