--- a/index1.html
+++ b/index1.html
@@ -1,6 +1,7 @@
-function Dog(name, color) {
-this.name = name;
-this.color = color;
-this.numLegs = 4;
+function House(numBedrooms) {
+this.numBedrooms = numBedrooms;
 }
-let terrier = new Dog("Kerri", "black");
+
+// Add your code below this line
+let myHouse = new House(8);
+myHouse instanceof House;
