--- a/index1.html
+++ b/index1.html
@@ -1,7 +1,15 @@
-function House(numBedrooms) {
-this.numBedrooms = numBedrooms;
+function Bird(name) {
+this.name = name;
+this.numLegs = 2;
 }
 
-// Add your code below this line
-let myHouse = new House(8);
-myHouse instanceof House;
+let canary = new Bird("Tweety");
+let ownProps = [];
+// Only change code below this line
+for (let property in canary) {
+if(canary.hasOwnProperty(property)) {
+ownProps.push(property);
+}
+}
+
+console.log(ownProps);
