--- a/index1.html
+++ b/index1.html
@@ -2,9 +2,10 @@ function Dog(name) {
 this.name = name;
 }
 
-Dog.prototype = {
 // Only change code below this line
-numLegs: 2,
+Dog.prototype = {
+constructor: Dog,
+numLegs: 4,
 eat: function() {
 console.log("nom nom nom");
 },
