--- a/index1.html
+++ b/index1.html
@@ -4,5 +4,7 @@ this.name = name;
 
 let beagle = new Dog("Snoopy");
 
-// Only change code below this line
-Dog.prototype.isPrototypeOf(beagle);
+Dog.prototype.isPrototypeOf(beagle);  // yields true
+
+// Fix the code below so that it evaluates to true
+Object.prototype.isPrototypeOf(Dog.prototype);
