--- a/index1.html
+++ b/index1.html
@@ -1,10 +1,25 @@
-function Dog(name) {
+function Animal() { };
+Animal.prototype = {
+constructor: Animal,
+eat: function() {
+console.log("nom nom nom");
+}
+};
+function Cat(name) {
 this.name = name;
 }
 
-let beagle = new Dog("Snoopy");
+Cat.prototype = {
+constructor: Cat,
 
-Dog.prototype.isPrototypeOf(beagle);  // yields true
+};
 
-// Fix the code below so that it evaluates to true
-Object.prototype.isPrototypeOf(Dog.prototype);
+function Bear(name) {
+this.name = name;
+}
+
+Bear.prototype = {
+constructor: Bear,
+
+};
+
