--- a/index1.html
+++ b/index1.html
@@ -1,9 +1,10 @@
 // The global variable
 let fixedValue = 4;
 
-function incrementer() {
 // Only change code below this line
+function incrementer(ter) {
+var ter = fixedValue+1;
+return ter;
 
-return fixedValue+1;
 // Only change code above this line
 }
