--- a/index1.html
+++ b/index1.html
@@ -1,10 +1,9 @@
-function sliceArray(anim, beginSlice, endSlice) {
+function nonMutatingSplice(cities) {
 // Only change code below this line
-const ter = inputAnim.slice(beginSlice, endSlice);
-return ter;
+return cities.slice(0, 3);
 
 // Only change code above this line
 }
 
-const inputAnim = ["Cat", "Dog", "Tiger", "Zebra", "Ant"];
-sliceArray(inputAnim, 1, 3);
+const inputCities = ["Chicago", "Delhi", "Islamabad", "London", "Berlin"];
+nonMutatingSplice(inputCities);
