--- a/index1.html
+++ b/index1.html
@@ -1,10 +1,9 @@
-const squareList = arr => {
+function alphabeticalOrder(arr) {
 // Only change code below this line
-return arr
-.filter(num => num > 0 && num % parseInt(num) === 0)
-.map(num => Math.pow(num, 2));
+return arr.sort(function(a, b) {
+return a === b ? 0 : a < b ? -1 : 1;
+});
 // Only change code above this line
-};
+}
 
-const squaredIntegers = squareList([-3, 4.8, 5, 3, -3.2]);
-console.log(squaredIntegers);
+alphabeticalOrder(["a", "d", "c", "a", "z", "g"]);
