--- a/index1.html
+++ b/index1.html
@@ -1,9 +1,12 @@
-function alphabeticalOrder(arr) {
+const globalArray = [5, 6, 3, 2, 9];
+
+function nonMutatingSort(arr) {
 // Only change code below this line
-return arr.sort(function(a, b) {
-return a === b ? 0 : a < b ? -1 : 1;
+return [].concat(arr).sort(function(a, b) {
+return a - b;
 });
+
 // Only change code above this line
 }
 
-alphabeticalOrder(["a", "d", "c", "a", "z", "g"]);
+nonMutatingSort(globalArray);
