--- a/index1.html
+++ b/index1.html
@@ -1,12 +1,9 @@
-const globalArray = [5, 6, 3, 2, 9];
-
-function nonMutatingSort(arr) {
+function splitify(str) {
 // Only change code below this line
-return [].concat(arr).sort(function(a, b) {
-return a - b;
-});
+
+return str.split(/\W/);
 
 // Only change code above this line
 }
 
-nonMutatingSort(globalArray);
+splitify("Hello World,I-am code");
