--- a/index1.html
+++ b/index1.html
@@ -1,9 +1,8 @@
-function splitify(str) {
+function sentensify(str) {
 // Only change code below this line
 
-return str.split(/\W/);
-
+return str.split(/\W/).join(" ");
 // Only change code above this line
 }
 
-splitify("Hello World,I-am code");
+sentensify("May-the-force-be-with-you");
