--- a/index1.html
+++ b/index1.html
@@ -1,8 +1,10 @@
-function sentensify(str) {
 // Only change code below this line
+function urlSlug(title) {
+return title.toLowerCase()
+.trim()
+.split(/\s+/)
+.join("-");
 
-return str.split(/\W/).join(" ");
-// Only change code above this line
 }
-
-sentensify("May-the-force-be-with-you");
+// Only change code above this line
+urlSlug("A Mind Needs Books Like A Sword Needs A Whetstone");
