--- a/index1.html
+++ b/index1.html
@@ -1,9 +1,9 @@
 function checkPositive(arr) {
 // Only change code below this line
-
-return arr.every(function(value) {
-return value > 0;
+return arr.some(function(value) {
+return value >= 0;
 });
+
 // Only change code above this line
 }
 
