--- a/index1.html
+++ b/index1.html
@@ -1,10 +1,9 @@
-function checkPositive(arr) {
-// Only change code below this line
-return arr.some(function(value) {
-return value >= 0;
-});
-
-// Only change code above this line
+function add(x, y, z) {
+return function(y) {
+return function(z) {
+return x + y + z;
+};
+};
 }
 
-checkPositive([1, 2, 3, -4, 5]);
+add(10)(20)(30);
