--- a/index1.html
+++ b/index1.html
@@ -1,7 +1,8 @@
-function diffArray(arr1, arr2) {
-return arr1
-.concat(arr2)
-.filter(item => !arr1.includes(item) || !arr2.includes(item));
+function destroyer(arr) {
+const valsToRemove = Array.from(arguments).slice(1);
+return arr.filter(function(val) {
+return !valsToRemove.includes(val);
+});
 }
 
-diffArray([1, 2, 3, 5], [1, 2, 3, 4, 5]);
+destroyer([1, 2, 3, 1, 2, 3], 2, 3);
