--- a/index1.html
+++ b/index1.html
@@ -1,8 +1,12 @@
-function destroyer(arr) {
-const valsToRemove = Array.from(arguments).slice(1);
-return arr.filter(function(val) {
-return !valsToRemove.includes(val);
-});
+function whatIsInAName(collection, source) {
+const arr = [];
+
+const sourceKeys = Object.keys(source);
+
+return collection
+.filter(obj => sourceKeys
+.every(key => obj.hasOwnProperty(key) &&
+obj[key] === source[key]));
 }
 
-destroyer([1, 2, 3, 1, 2, 3], 2, 3);
+whatIsInAName([{ first: "Romeo", last: "Montague" }, { first: "Mercutio", last: null }, { first: "Tybalt", last: "Capulet" }], { last: "Capulet" });
