--- a/index1.html
+++ b/index1.html
@@ -1,13 +1,25 @@
-var index = str.indexOf(before);
-// Check to see if the first letter is uppercase or not
-if (str[index] === str[index].toUpperCase()) {
-// Change the after word to be capitalized before we use it.
-after = after.charAt(0).toUpperCase() + after.slice(1);
-} else {
-// Change the after word to be uncapitalized before we use it.
-after = after.charAt(0).toLowerCase() + after.slice(1);
+function pairElement(str) {
+let matchWithBasePair = function(char, pairedArray) {
+switch (char) {
+case "A":
+pairedArray.push(["A", "T"]);
+break;
+case "T":
+pairedArray.push(["T", "A"]);
+break;
+case "C":
+pairedArray.push(["C", "G"]);
+break;
+case "G":
+pairedArray.push(["G", "C"]);
+break;
 }
-// Now replace the original str with the edited one.
-str = str.replace(before, after);
+}
+const paired = [];
+for (let i = 0; i < str.length; i++) {
+matchWithBasePair(str[i], paired);
+}
 
-return str;
+return paired;
+}
+pairElement("GCG");
