--- a/index1.html
+++ b/index1.html
@@ -1,16 +1,25 @@
-function fearNotLetter(str) {
-for (let i = 0; i < str.length; i++) {
-/* code of current character */
-const charCode = str.charCodeAt(i);
+function uniteUnique(arr1, arr2, arr3) {
+// Creates an empty array to store our final result.
+const finalArray = [];
 
-/* if code of current character is not equal to first character + no of iteration
-then a letter was skipped */
-if (charCode !== str.charCodeAt(0) + i) {
-/* if current character skipped past a character find previous character and return */
-return String.fromCharCode(charCode - 1);
+// Loop through the arguments object to truly make the program work with two or more arrays
+// instead of 3.
+for (let i = 0; i < arguments.length; i++) {
+const arrayArguments = arguments[i];
+
+// Loops through the array at hand
+for (let j = 0; j < arrayArguments.length; j++) {
+let indexValue = arrayArguments[j];
+
+// Checks if the value is already on the final array.
+if (finalArray.indexOf(indexValue) < 0) {
+finalArray.push(indexValue);
 }
 }
-return undefined;
 }
 
-fearNotLetter("abce");
+return finalArray;
+}
+
+
+uniteUnique([1, 3, 2], [5, 2, 1, 4], [2, 1]);
