--- a/index1.html
+++ b/index1.html
@@ -1,25 +1,14 @@
-function uniteUnique(arr1, arr2, arr3) {
-// Creates an empty array to store our final result.
-const finalArray = [];
-
-// Loop through the arguments object to truly make the program work with two or more arrays
-// instead of 3.
-for (let i = 0; i < arguments.length; i++) {
-const arrayArguments = arguments[i];
-
-// Loops through the array at hand
-for (let j = 0; j < arrayArguments.length; j++) {
-let indexValue = arrayArguments[j];
-
-// Checks if the value is already on the final array.
-if (finalArray.indexOf(indexValue) < 0) {
-finalArray.push(indexValue);
-}
-}
+function convertHTML(str) {
+// Use Object Lookup to declare as many HTML entities as needed.
+const htmlEntities = {
+"&": "&amp;",
+"<": "&lt;",
+">": "&gt;",
+'"': "&quot;",
+"'": "&apos;"
+};
+// Using a regex, replace characters with it's corresponding html entity
+return str.replace(/([&<>\"'])/g, match => htmlEntities[match]);
 }
 
-return finalArray;
-}
-
-
-uniteUnique([1, 3, 2], [5, 2, 1, 4], [2, 1]);
+convertHTML("Dolce & Gabbana");
