--- a/index1.html
+++ b/index1.html
@@ -1,14 +1,16 @@
-function convertHTML(str) {
-// Use Object Lookup to declare as many HTML entities as needed.
-const htmlEntities = {
-"&": "&amp;",
-"<": "&lt;",
-">": "&gt;",
-'"': "&quot;",
-"'": "&apos;"
-};
-// Using a regex, replace characters with it's corresponding html entity
-return str.replace(/([&<>\"'])/g, match => htmlEntities[match]);
+function sumFibs(num) {
+let prevNumber = 0;
+let currNumber = 1;
+let result = 0;
+while (currNumber <= num) {
+if (currNumber % 2 !== 0) {
+result += currNumber;
+}
+currNumber += prevNumber;
+prevNumber = currNumber - prevNumber;
 }
 
-convertHTML("Dolce & Gabbana");
+return result;
+}
+
+sumFibs(4);
