--- a/index1.html
+++ b/index1.html
@@ -1,11 +1,18 @@
-function sumPrimes(num) {
-// Check all numbers for primality
-let primes = [];
-for (let i = 2; i <= num; i++) {
-if (primes.every((prime) => i % prime !== 0))
-primes.push(i);
+function smallestCommons(arr) {
+const [min, max] = arr.sort((a, b) => a - b);
+const range = Array(max - min + 1)
+.fill(0)
+.map((_, i) => i + min);
+// Largest possible value for SCM
+const upperBound = range.reduce((prod, curr) => prod * curr);
+// Test all multiples of 'max'
+for (let multiple = max; multiple <= upperBound; multiple += max) {
+// Check if every value in range divides 'multiple'
+const divisible = range.every((value) => multiple % value === 0);
+if (divisible) {
+return multiple;
 }
-return primes.reduce((sum, prime) => sum + prime, 0);
+}
 }
 
-sumPrimes(10);
+smallestCommons([1,5]);
