--- a/index1.html
+++ b/index1.html
@@ -1,18 +1,7 @@
-function smallestCommons(arr) {
-const [min, max] = arr.sort((a, b) => a - b);
-const range = Array(max - min + 1)
-.fill(0)
-.map((_, i) => i + min);
-// Largest possible value for SCM
-const upperBound = range.reduce((prod, curr) => prod * curr);
-// Test all multiples of 'max'
-for (let multiple = max; multiple <= upperBound; multiple += max) {
-// Check if every value in range divides 'multiple'
-const divisible = range.every((value) => multiple % value === 0);
-if (divisible) {
-return multiple;
-}
-}
+function dropElements(arr, func) {
+let sliceIndex = arr.findIndex(func);
+return arr.slice(sliceIndex >= 0 ? sliceIndex : arr.length);
+
 }
 
-smallestCommons([1,5]);
+dropElements([1, 2, 3], function(n) {return n < 3; });
