--- a/index1.html
+++ b/index1.html
@@ -1,11 +1,6 @@
-function palindrome(str) {
-str = str.toLowerCase().replace(/[\W_]/g, '');
-for(var i = 0, len = str.length - 1; i < len/2; i++) {
-if(str[i] !== str[len-i]) {
-return false;
-}
-}
-return true;
+function steamrollArray(arr) {
+const flat = [].concat(...arr);
+return flat.some(Array.isArray) ? steamrollArray(flat) : flat;
 }
 
-palindrome("eye");
+steamrollArray([1, [2], [3, [[4]]]]);
