--- a/index1.html
+++ b/index1.html
@@ -1,6 +1,11 @@
-function steamrollArray(arr) {
-const flat = [].concat(...arr);
-return flat.some(Array.isArray) ? steamrollArray(flat) : flat;
+function binaryAgent(str) {
+var biString = str.split(" ");
+var uniString = [];
+for (var i = 0; i < biString.length; i++) {
+uniString.push(String.fromCharCode(parseInt(biString[i], 2)));
 }
 
-steamrollArray([1, [2], [3, [[4]]]]);
+return uniString.join("");
+}
+
+binaryAgent("01000001 01110010 01100101 01101110 00100111 01110100 00100000 01100010 01101111 01101110 01100110 01101001 01110010 01100101 01110011 00100000 01100110 01110101 01101110 00100001 00111111");
