--- a/index1.html
+++ b/index1.html
@@ -1,12 +1,30 @@
-function addTogether() {
-const [first, second] = arguments;
-if (typeof(first) !== "number")
-return undefined;
-if (arguments.length === 1)
-return (second) => addTogether(first, second);
-if (typeof(second) !== "number")
-return undefined;
-return first + second;
-}
+const Person = function(firstAndLast) {
+let fullName = firstAndLast;
 
-addTogether(2,3);
+this.getFirstName = function() {
+return fullName.split(" ")[0];
+};
+
+this.getLastName = function() {
+return fullName.split(" ")[1];
+};
+
+this.getFullName = function() {
+return fullName;
+};
+
+this.setFirstName = function(name) {
+fullName = name + " " + fullName.split(" ")[1];
+};
+
+this.setLastName = function(name) {
+fullName = fullName.split(" ")[0] + " " + name;
+};
+
+this.setFullName = function(name) {
+fullName = name;
+};
+};
+
+const bob = new Person("Bob Ross");
+console.log(bob.getFullName());
