--- a/index1.html
+++ b/index1.html
@@ -1,4 +1,14 @@
-function rot13(str) {
-return str.replace(/[A-Z]/g, L => String.fromCharCode((L.charCodeAt(0) % 26) + 65));}
+function telephoneCheck(str) {
+let rex1 = /^(1\s?)?\d{3}([-\s]?)\d{3}\2\d{4}$/,
+rex2 = /^(1\s?)?\(\d{3}\)\s?\d{3}[-\s]?\d{4}$/;
 
-rot13("SERR PBQR PNZC");
+if (rex1.test(str)) {
+return true;
+}
+else {
+return rex2.test(str) ? true : false
+}
+}
+
+
+telephoneCheck("555-555-5555");
