--- a/index1.html
+++ b/index1.html
@@ -1,7 +1,7 @@
-function makeNegative(num) {
-if (num >0) {
-return -num
-} if (num < 0) {
-return num
-} else return 0;
+function reverseString(str) {
+let reversedStr = "";
+for (let i = str.length - 1; i >= 0; i--) {
+reversedStr += str[i];
+}
+return reversedStr;
 }
