--- a/index1.html
+++ b/index1.html
@@ -1,7 +1,3 @@
-function reverseString(str) {
-let reversedStr = "";
-for (let i = str.length - 1; i >= 0; i--) {
-reversedStr += str[i];
-}
-return reversedStr;
+function greet(name){
+return "Hello, " + name + " how are you doing today?"
 }
