--- a/index1.html
+++ b/index1.html
@@ -1,3 +1,9 @@
-function greet(name){
-return "Hello, " + name + " how are you doing today?"
+function positiveSum(arr) {
+var sum = 0;
+for(var i = 0; i < arr.length; i++) {
+if(arr[i] > 0) {
+sum += arr[i];
+}
+}
+return sum;
 }
