--- a/index1.html
+++ b/index1.html
@@ -1,9 +1,11 @@
-function positiveSum(arr) {
-var sum = 0;
-for(var i = 0; i < arr.length; i++) {
-if(arr[i] > 0) {
-sum += arr[i];
+
+function even_or_odd(n) {
+if(n % 2 === 0)
+{
+return 'Even';
 }
+else
+{
+return 'Odd';
 }
-return sum;
-}
+};
