--- a/index1.html
+++ b/index1.html
@@ -1,4 +1,7 @@
-function opposite(number){
-let oppNum = 0 - number
-return oppNum;
+const removeChar = str => {
+let newStr = ''
+for(let i = 1; i < str.length - 1; i++) {
+newStr += str[i]
+}
+return newStr
 }
