--- a/index1.html
+++ b/index1.html
@@ -1,7 +1,3 @@
-const removeChar = str => {
-let newStr = ''
-for(let i = 1; i < str.length - 1; i++) {
-newStr += str[i]
-}
-return newStr
+function numberToString(num) {
+return String(num)
 }
